# egui_open_gtd

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain
android/: Cargo.toml
android/src/: app.rs  lib.rs
core/: Cargo.toml
core/src/: app.rs  lib.rs  main_screen.rs
core/src/widgets/: button_widget.rs  centered_container_widget.rs  mod.rs  text_widget.rs
desktop/: Cargo.toml
desktop/src/: main.rs
