[package]
name = "open_gtd_android"
version = "0.1.0"
authors = ["Aleksei Novikov <novikov.aleksei.92@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.92"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.android]
package = "com.example.egui_open_gtd"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 36

[package.metadata.android.signing.release]
path = "release.keystore"
keystore_password = "android"
key_alias = "my_app"
key_password = "android"

[dependencies]
open_gtd_core = { path = "../core" }
eframe = { version = "0.34.1", features = ["persistence"] }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
