[package]
name = "open_gtd_core"
version = "0.1.0"
authors = ["Aleksei Novikov <novikov.aleksei.92@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.92"

[lints]
workspace = true

[dependencies]
egui = "0.34.1"
eframe = { version = "0.34.1", features = ["persistence"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
